Velcro test First SandBox/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>First</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>UK complaints</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Number__c</fullName>
        <label>CI Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Notes__c</fullName>
        <label>CRS Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactFormComments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactFormCountry__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFormEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactFormFirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFormLastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFormPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFormPurchaseLocation__c</fullName>
        <label>Purchase Location</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correcttive_Action_Needed__c</fullName>
        <label>Correcttive Action Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeadLine__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>DeadLine</description>
        <inlineHelpText>DeadLine</inlineHelpText>
        <label>DeadLine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Ref__c</fullName>
        <label>Form Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigator__c</fullName>
        <description>Investigator</description>
        <inlineHelpText>Investigator</inlineHelpText>
        <label>Investigator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>David</fullName>
                </value>
                <value>
                    <fullName>Joanne</fullName>
                </value>
                <value>
                    <fullName>Marie</fullName>
                </value>
                <value>
                    <fullName>Melissa</fullName>
                </value>
                <value>
                    <fullName>Quality - VESA</fullName>
                </value>
                <value>
                    <fullName>Sales - specify</fullName>
                </value>
                <value>
                    <fullName>Sean</fullName>
                </value>
                <value>
                    <fullName>Sophie</fullName>
                </value>
                <value>
                    <fullName>Sue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <description>Invoice Currency</description>
        <inlineHelpText>Invoice Currency</inlineHelpText>
        <label>Invoice Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice Number</description>
        <inlineHelpText>Invoice Number</inlineHelpText>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_recurring_issue__c</fullName>
        <label>Is this a recurring issue?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Contact__c</fullName>
        <label>Quality Contact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Quality_Issue_Plant__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alejandro Mirazo</fullName>
                </value>
                <value>
                    <fullName>Ben Tarazon</fullName>
                </value>
                <value>
                    <fullName>Jerome Deguzman</fullName>
                </value>
                <value>
                    <fullName>Mike Morrison</fullName>
                </value>
                <value>
                    <fullName>Stephen Olden</fullName>
                </value>
                <value>
                    <fullName>Steve Olden</fullName>
                </value>
                <value>
                    <fullName>Steve Veilleux</fullName>
                </value>
                <value>
                    <fullName>Toni Chaput</fullName>
                </value>
                <value>
                    <fullName>Victor Garcia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Issue_Plant__c</fullName>
        <label>Quality Issue Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MHT</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>VAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Needed__c</fullName>
        <label>RMANeeded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <label>RMA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales error</fullName>
                </value>
                <value>
                    <fullName>Admin/freight charge error</fullName>
                </value>
                <value>
                    <fullName>Customer error</fullName>
                </value>
                <value>
                    <fullName>Shortage/product discrepancy</fullName>
                </value>
                <value>
                    <fullName>Order Entry error (qty/price…)</fullName>
                </value>
                <value>
                    <fullName>Non conformance</fullName>
                </value>
                <value>
                    <fullName>Rebates (finance)</fullName>
                </value>
                <value>
                    <fullName>System/Oracle error</fullName>
                </value>
                <value>
                    <fullName>Delivery issue</fullName>
                </value>
                <value>
                    <fullName>Promotion issue (VEMEA_CDM)</fullName>
                </value>
                <value>
                    <fullName>POD request</fullName>
                </value>
                <value>
                    <fullName>Alfatex warehouse</fullName>
                </value>
                <value>
                    <fullName>Alfatex quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_LastActivity__c</fullName>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastLogin__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastPasswordChanged__c</fullName>
        <label>Last Password Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_PasswordAnswer__c</fullName>
        <label>Password Answer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PasswordQuestion__c</fullName>
        <label>Password Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <inlineHelpText>The test script number from the left hand column.</inlineHelpText>
        <label>Test Script</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Value_USD__c</fullName>
        <label>Total Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Rolls</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
                <value>
                    <fullName>Square meters</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_USD_500_00__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under USD 500.00</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>UK_Inquiries_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>UK Inquiries</label>
        <queue>UK_Inquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK_complaints_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>UK complaints</label>
        <queue>UK_complaints</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>LATAM_New_Case</fullName>
        <active>true</active>
        <businessProcess>First</businessProcess>
        <description>LATAM Customer Relations Cases</description>
        <label>LATAM New Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>NAM_New_Quality_Case</fullName>
        <active>true</active>
        <businessProcess>First</businessProcess>
        <description>NAM Quality CRS Cases</description>
        <label>NAM New Quality Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Case</fullName>
        <active>true</active>
        <businessProcess>UK complaints</businessProcess>
        <label>UK Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Complaint</fullName>
        <active>true</active>
        <businessProcess>UK complaints</businessProcess>
        <description>UK complaints</description>
        <label>UK Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>